# CHEM279_HW4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: Atom.h  AtomReader.h  BasisFunction.h  Molecule.h  Reader.h
Source/: Atom.cpp  AtomReader.cpp  Molecule.cpp  Molecule_hartreeFock.cpp  Molecule_init.cpp  Molecule_overlap.cpp  Molecule_utils.cpp
Test/: SCF_test.cpp
Utils/Inputs/: N.txt  N2.txt
